# Polygon.io-data-ingestion-pipeline

./: README.md  environment.yml  get_tickers.ipynb  get_tickers_from_data.ipynb  polygon_ingest_monthslice.py  pyproject.toml  requirements.txt
data/ticker_lists/: all_polygonio_tickers.csv  all_polygonio_tickers.json  all_polygonio_tickers.txt  nasdaq100.csv  sp500.csv  sp500.json  sp500.txt  spx_ndx_combined.csv  spx_ndx_combined.json  spx_ndx_combined.txt  test_universe.json
legacy_scripts/: factor_builder.py  factor_builder.py~  polygon_ingest_day.py  polygon_ingest_minute.py  polygon_lake_loader.py  run_pullers.py
notebooks/: 01_index_universes.ipynb  02_extract_tickers.ipynb  03_load_data_inspect_adjustment.ipynb  04_temp.ipynb
scripts/: build_adjusted_lake.sh  build_adjusted_lake.sh~  build_index_universes.py  emit_split_backfill_cmds.py  extract_tickers_from_flatfiles.py  pull_ref_data.sh
src/polygon_ingest/: cli.py  cli.py~  corp_actions.py  ingest.py  lake_io.py
src/polygon_pullers/: __init__.py  __init__.py~
src/polygonio_ingestion.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
ticker_lists/: all_polygonio_tickers.csv  all_polygonio_tickers.json  all_polygonio_tickers.txt  nasdaq100.json
